# PD-DWI

./: .gitignore  .readthedocs.yaml  Contributing.md  Dockerfile  LICENSE.txt  README.md  github.env  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: CI.yaml  ci-cd.yaml  pre-release.yaml  release.yaml
docker/: development.Dockerfile
docs/: configuration.md  dataset.md  dataset_preprocessing.md  dataset_setup.md  index.md  installation.md  usage.md
docs/installation/: install_package.md
docs/usage/: index.md  model.md  pre_processing.md  training_configuration.md
src/pd_dwi/: __init__.py  dataset.py  model.py  scripts.py  train.py  training_utils.py
src/pd_dwi/config/: config.py  schema.yaml  utils.py
src/pd_dwi/config/samples/: F.yaml  adc0100.yaml  adc0100600800.yaml  adc0100_F.yaml  adc100600800.yaml
src/pd_dwi/configurations/: F.yaml  adc0100.yaml  adc0100600800.yaml  adc0100_F.yaml  adc100600800.yaml  cv_adc0100_F.yaml  schema.yaml
src/pd_dwi/configurations/xgboost/: F.yaml  adc0100600800.yaml  adc0100_F.yaml  adc100600800.yaml
src/pd_dwi/dcm_utils/: reader.py  tags.py  writer.py
src/pd_dwi/feature_selection/: select_k_best.py
src/pd_dwi/models/: F.pkl  __init__.py  adc0100.pkl  adc0100600800.pkl  adc0100_F.pkl  adc100600800.pkl  registry.json
src/pd_dwi/preprocessing/: adc.py  column_transformer.py
src/pd_dwi/preprocessing/transformers/: hormone_receptor_encoder.py  radiomics_encoder.py  sbr_grade_encoder.py
src/pd_dwi/scripts/: adc_preprocess_command.py  cli.py  list_command.py  predict_command.py  score_command.py  train_command.py
src/pd_dwi/utils/: dcm_utils.py
tests/: conftest.py  test_cli.py  test_config.py  test_model.py  test_preprocessing_adc.py  test_select_k_best.py
tests/data/: invalid_encoders_bad_modality.yaml  invalid_encoders_bad_time_points.yaml  invalid_no_modalities.yaml  valid.yaml
