[metadata]
name = pd-dwi
version = attr: pd_dwi.__version__
description = Physiologically-Decomposed Diffusion-Weighted MRI machine-learning model for predicting response to neoadjuvant chemotherapy in invasive breast cancer
classifiers =
                   Programming Language :: Python :: 3
author = Maya Gilad
author_email = ms.maya.gilad@gmail.com
url = https://github.com/TechnionComputationalMRILab/PD-DWI
description-file = README.md

[options]
package_dir=
    =src
packages = find:
python_requires = >= 3.6
include_package_data = True

[options.packages.find]
where=src

[options.package_data]
pd_dwi.models =
    *.pkl
    *.json
pd_dwi.configurations =
    *.yaml
